--- a/src/index.css
+++ b/src/index.css
@@ -74,3 +74,26 @@ body,
 .table-header {
   font-size: 10px; /* Adjust the font size to your preference */
 }
+
+
+.upload-box {
+  font-size: 14px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  border-radius: 50px;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+::-webkit-file-upload-button {
+  color: white;
+  font-weight: 600;
+  background-color: #008DFF;
+  padding: 10px;
+  border: none;
+  border-radius: 50px;
+  outline: none;
+}
+
+::-webkit-file-upload-button:hover{
+  background-color: #39429d;
+}
